@@ -32,7 +32,6 @@ import org.geoserver.catalog.CoverageView.InputCoverageBand;
 import org.geoserver.catalog.CoverageView.SelectedResolution;
 
 /** */
-@SuppressWarnings("serial")
 public class CoverageViewEditor extends FormComponentPanel<List<String>> {
 
     IModel<List<String>> coverages;
@@ -73,7 +72,7 @@ public class CoverageViewEditor extends FormComponentPanel<List<String>> {
                         "coveragesChoice",
                         new Model<>(),
                         new ArrayList<>(coverages.getObject()),
-                        new ChoiceRenderer<String>() {
+                        new ChoiceRenderer<>() {
                             @Override
                             public Object getDisplayValue(String coverage) {
                                 return coverage;
@@ -88,7 +87,7 @@ public class CoverageViewEditor extends FormComponentPanel<List<String>> {
                         "outputBandsChoice",
                         new Model<>(),
                         new ArrayList<>(outputBands.getObject()),
-                        new ChoiceRenderer<CoverageBand>() {
+                        new ChoiceRenderer<>() {
                             @Override
                             public Object getDisplayValue(CoverageBand vcb) {
                                 return vcb.getDefinition();
@@ -112,7 +111,7 @@ public class CoverageViewEditor extends FormComponentPanel<List<String>> {
                 new DropDownChoice<>(
                         "compositionType",
                         new PropertyModel<>(this, "compositionType"),
-                        Arrays.asList(CompositionType.BAND_SELECT),
+                        List.of(CompositionType.BAND_SELECT),
                         new CompositionTypeRenderer());
 
         compositionChoice.setOutputMarkupId(true);
